Bug 1258924 - Reorder DOMIfaceAndProtoJSClass fields to reduce padding. r=bz.

On 64-bit this reduces sizeof(DOMIfaceAndProtoJSClass) from 336 to 328, saving
20 KiB. On 32-bit it should save half that.