dom/base/WindowNamedPropertiesHandler.cpp
@@ -275,10 +275,10 @@ static const DOMIfaceAndProtoJSClass WindowNamedPropertiesClass = {
   PROXY_CLASS_DEF("WindowProperties",
                   JSCLASS_IS_DOMIFACEANDPROTOJSCLASS),
   eNamedPropertiesObject,
-  sWindowNamedPropertiesNativePropertyHooks,
-  "[object WindowProperties]",
   prototypes::id::_ID_Count,
   0,
+  sWindowNamedPropertiesNativePropertyHooks,
+  "[object WindowProperties]",
   EventTargetBinding::GetProtoObject
 };
 
